--- a/GridView/src/app/app.component.html
+++ b/GridView/src/app/app.component.html
@@ -3,6 +3,7 @@
 </div> -->
 <div style="text-align: center;">
   <button [routerLink]="['/assets/assets']" routerLinkActive="router-link-active">Show Assets</button>
+  <button [routerLink]="['/assets/dashboard']" routerLinkActive="router-link-active">Go To Dashboard</button>
 </div>
 <router-outlet></router-outlet>
 <div style="text-align: center;"><h2>User Table</h2></div>
