--- a/Frontend/src/app/dashboard/components/Forms/add-asset/add-asset.component.html
+++ b/Frontend/src/app/dashboard/components/Forms/add-asset/add-asset.component.html
@@ -1,5 +1,5 @@
 <section class="container">
-  <div class="card">
+  <div class="card centre-text">
     <h1>Add Asset</h1>
     <form class="form" #assetForm="ngForm" (ngSubmit)="submitAsset()">
       <div class="mb-3 leftBox">
