--- a/Frontend/src/app/dashboard/components/Forms/add-vendor/add-vendor.component.html
+++ b/Frontend/src/app/dashboard/components/Forms/add-vendor/add-vendor.component.html
@@ -7,22 +7,14 @@
           routerLinkActive="router-link-active"
           class="btn btn-warning"
         >
-          Back to Vendors
+          Back
         </button>
       </div>
       <div class="centre-text col-6">
         <h2 class="centre-text" *ngIf="updateflag">Add Vendor</h2>
         <h2 class="centre-text" *ngIf="!updateflag">Update Vendor</h2>
       </div>
-      <div class="centre-text col-3">
-        <button
-          [routerLink]="['/dashboard']"
-          routerLinkActive="router-link-active"
-          class="btn btn-secondary"
-        >
-          Back to Dashboard
-        </button>
-      </div>
+      
     </div>
     <br />
     <form #vendorForm="ngForm" (ngSubmit)="submitVendorDetails()">
@@ -38,7 +30,7 @@
           required
           #name="ngModel"
           minlength="2"
-          placeholder="Enter name"
+          placeholder="Enter name  e.g. &quot;Pratik Balkunde&quot;"
           [(ngModel)]="vendor.name"
         />
         <span *ngIf="name.invalid && name.touched" class="errorMessage"
@@ -58,7 +50,7 @@
           required
           pattern="^((\\+91-?)|0)?[0-9]{10}$"
           #contact="ngModel"
-          placeholder="Enter contact number"
+          placeholder="Enter contact number  e.g. &quot;9876543210&quot;"
           [(ngModel)]="vendor.contactNo"
         />
         <span *ngIf="contact.invalid && contact.touched" class="errorMessage"
@@ -77,7 +69,7 @@
           required
           minlength="4"
           #address="ngModel"
-          placeholder="Enter Complete address"
+          placeholder="Enter Complete address e.g. &quot;Embassy Tech Zone, Hinjewadi, Phase II, Pune&quot;"
           [(ngModel)]="vendor.address"
         ></textarea>
         <span *ngIf="address.invalid && address.touched" class="errorMessage"
