--- a/Frontend/src/app/dashboard/components/pages/assets/assets.component.css
+++ b/Frontend/src/app/dashboard/components/pages/assets/assets.component.css
@@ -16,3 +16,15 @@
 .row{
     margin-top: 0px;
 }
+
+.tableScroll{
+    width: inherit
+}
+
+.buttonMarj{
+    margin-top: 25px;
+}
+
+.custom-control-label{
+    cursor: pointer;
+}
