--- a/Frontend/src/app/dashboard/components/pages/assets/assets.component.html
+++ b/Frontend/src/app/dashboard/components/pages/assets/assets.component.html
@@ -1,145 +1,180 @@
 <section class="TableContainer">
   <div class="card">
-  <table class="table ">
-    <tbody>
-      <tr>
-        <td style="vertical-align: middle; text-align: center; width: 100px;">
-          <div class="centre-text">
-            <button
-              [routerLink]="['/dashboard']"
-              routerLinkActive="router-link-active"
-              class="btn btn-warning"
-            >
-              Back
-            </button>
-          </div>
-        </td>
-        <td style="vertical-align: middle; text-align: center">
+    <h2 class="centre-text">Asset List</h2>
+    <div class="row centre-text">
+      <div class="col-3">
+        <div class="buttonMarj">
           <button
             [routerLink]="['/dashboard/add-asset']"
             routerLinkActive="router-link-active"
             class="btn btn-success"
           >
-            Add New
+            <i class="bi bi-patch-plus"></i>
           </button>
-        </td>
-        <td>
-          <label for="select2">Select Type</label>
-          <select
-            id="select2"
-            [(ngModel)]="selectType"
-            (change)="sortByType()"
-            class="form-select"
-          >
-            <option value="All" selected>All</option>
-            <option *ngFor="let item of myTypes" [value]="item">
-              {{ item }}
-            </option>
-          </select>
-        </td>
-        <td>
-          <label for="select1">Select Model</label>
-          <select
-            id="select1"
-            [(ngModel)]="selectModel"
-            (change)="sortByModel()"
-            class="form-select"
-          >
-            <option value="All" selected>All</option>
-            <option *ngFor="let item of myset" [value]="item">
-              {{ item }}
-            </option>
-          </select>
-        </td>
-      </tr>
-    </tbody>
-  </table>
-  <div class="row">
-    <div class="col-3" style="vertical-align: middle; text-align: center;">
-      <button type="submit" class="btn btn-info"
-      (click)="editAsset()">Edit</button>
-      <button type="submit" class="btn btn-danger"
-      (click)="deleteAsset()">Delete</button>
+          <button type="submit" class="btn btn-info" (click)="editAsset()">
+            <i class="bi bi-pen"></i>
+          </button>
+          <button type="submit" class="btn btn-danger" (click)="deleteAsset()">
+            <i class="bi bi-trash"></i>
+          </button>
+        </div>
+      </div>
+      <div class="col-3">
+        <label for="search">Search</label>
+        <input
+          id="search"
+          type="text"
+          class="form-control"
+          [(ngModel)]="searchText"
+          placeholder="   🔍Start searching......"
+        />
+      </div>
+      <div class="col-2">
+        <label for="select2">Select Type</label>
+        <select
+          id="select2"
+          [(ngModel)]="selectType"
+          (change)="sortByType()"
+          class="form-select"
+        >
+          <option value="All" selected>All</option>
+          <option *ngFor="let item of myTypes" [value]="item">
+            {{ item }}
+          </option>
+        </select>
+      </div>
+      <div class="col-2">
+        <label for="select1">Select Model</label>
+        <select
+          id="select1"
+          [(ngModel)]="selectModel"
+          (change)="sortByModel()"
+          class="form-select"
+        >
+          <option value="All" selected>All</option>
+          <option *ngFor="let item of myset" [value]="item">
+            {{ item }}
+          </option>
+        </select>
+      </div>
+      <div class="col-2 buttonMarj">
+        <button
+          [routerLink]="['/dashboard']"
+          routerLinkActive="router-link-active"
+          class="btn btn-warning"
+        >
+          <i class="bi bi-arrow-return-left"></i>
+        </button>
+      </div>
     </div>
-    <div class="col-9">
-      <input
-      type="text"
-      class="form-control"
-      [(ngModel)]="searchText"
-      placeholder="   🔍Start searching......"
-    />
-    </div>
-</div>
-  <br />
-  <table class="table tableScroll">
-    <thead>
-      <th>Sr No.</th>
-      <th>Type</th>
-      <th>Name</th>
-      <th>Proprietary</th>
-      <th>Configuration</th>
-      <th>ServiceTag</th>
-      <th>Model</th>
-      <th>HostName</th>
-      <th>Oem</th>
-      <th>ExpiryDate</th>
-      <th>Owner</th>
-      <th>Remarks</th>
-      <th>Ram</th>
-      <th>Vendor Name</th>
-      <th style="text-align: center">Action</th>
-    </thead>
-    <tbody>
-      <tr *ngFor="let item of assets | filter : searchText; let i = index">
-        <td><input class="form-check-input"
-          type="radio" name="a" value="{{item.id}}" id="{{i}}" [(ngModel)]="readioSelected"><label class="custom-control-label" for="{{i}}">{{i + 1}}</label></td>
-        <td>{{ item.tyape }}</td>
-        <td>{{ item.name }}</td>
-        <td>{{ item.proprietary }}</td>
-        <td>{{ item.configuration }}</td>
-        <td>{{ item.serviceTag }}</td>
-        <td>{{ item.model }}</td>
-        <td>{{ item.hostName }}</td>
-        <td>{{ item.oem }}</td>
-        <td>{{ item.expiryDate | date : "MM-dd-yyyy" }}</td>
-        <td>{{ item.owner }}</td>
-        <td>{{ item.remarks }}</td>
-        <td>{{ item.ram }}</td>
-        <td>{{ item.vendorId | vendorsName : vendors }}</td>
-        <td>
-          <button
-            type="submit"
-            value="{{ item.id }}"
-            (click)="EditAsset(item.id)"
-            class="btn btn-info"
-          >
-            Edit
-          </button>
-          <button
-            type="submit"
-            value="{{ item.id }}"
-            (click)="DeleteAsset(item.id)"
-            class="btn btn-danger"
-          >
-            Delete
-          </button>
-        </td>
-      </tr>
-    </tbody>
-  </table>
-  <!-- <app-items [headers]="headers" [data]="data"></app-items> -->
-  <!-- 
-  <br/>
-<div class="centre-text"><h3>Table Using Reusable Table Component</h3></div>
 
-
-<app-re-table
-[class]="classStyle"
-[heading]="headingArray"
-[data]="assetList"
-[tableSize]="tableSize"
-(fetch)="ngOnInit()"
->
-</app-re-table> -->
-</div>
+    <br />
+    <table
+      class="table tableScroll"
+      *ngIf="assets | filter : searchText as result"
+    >
+      <thead *ngIf="result.length != 0">
+        <th>Sr No.</th>
+        <th>Type</th>
+        <th>Name</th>
+        <th>Proprietary</th>
+        <th>Configuration</th>
+        <th>ServiceTag</th>
+        <th>Model</th>
+        <th>HostName</th>
+        <th>Oem</th>
+        <th>ExpiryDate</th>
+        <th>Owner</th>
+        <th>Remarks</th>
+        <th>Ram</th>
+        <th>Vendor Name</th>
+      </thead>
+      <tbody>
+        <tr *ngFor="let item of result; let i = index">
+          <td>
+            <input
+              class="form-check-input"
+              type="radio"
+              name="a"
+              value="{{ item.id }}"
+              id="{{ i }}"
+              [(ngModel)]="readioSelected"
+              style="cursor: pointer"
+            />
+            <label class="custom-control-label" for="{{ i }}">
+              &nbsp;{{ i + 1 }}
+            </label>
+          </td>
+          <td>
+            <label class="custom-control-label" for="{{ i }}">{{
+              item.tyape
+            }}</label>
+          </td>
+          <td>
+            <label class="custom-control-label" for="{{ i }}">{{
+              item.name
+            }}</label>
+          </td>
+          <td>
+            <label class="custom-control-label" for="{{ i }}">{{
+              item.proprietary
+            }}</label>
+          </td>
+          <td>
+            <label class="custom-control-label" for="{{ i }}">{{
+              item.configuration
+            }}</label>
+          </td>
+          <td>
+            <label class="custom-control-label" for="{{ i }}">{{
+              item.serviceTag
+            }}</label>
+          </td>
+          <td>
+            <label class="custom-control-label" for="{{ i }}">{{
+              item.model
+            }}</label>
+          </td>
+          <td>
+            <label class="custom-control-label" for="{{ i }}">{{
+              item.hostName
+            }}</label>
+          </td>
+          <td>
+            <label class="custom-control-label" for="{{ i }}">{{
+              item.oem
+            }}</label>
+          </td>
+          <td>
+            <label class="custom-control-label" for="{{ i }}">{{
+              item.expiryDate | date : "MM-dd-yyyy"
+            }}</label>
+          </td>
+          <td>
+            <label class="custom-control-label" for="{{ i }}">{{
+              item.owner
+            }}</label>
+          </td>
+          <td>
+            <label class="custom-control-label" for="{{ i }}">{{
+              item.remarks
+            }}</label>
+          </td>
+          <td>
+            <label class="custom-control-label" for="{{ i }}">{{
+              item.ram
+            }}</label>
+          </td>
+          <td>
+            <label class="custom-control-label" for="{{ i }}">{{
+              item.vendorId | vendorsName : vendors
+            }}</label>
+          </td>
+        </tr>
+        <tr *ngIf="result.length === 0">
+          <td colspan="15">!!-- No Record Found --!!</td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
 </section>
