--- a/Frontend/src/app/dashboard/components/Forms/add-asset/add-asset.component.html
+++ b/Frontend/src/app/dashboard/components/Forms/add-asset/add-asset.component.html
@@ -19,7 +19,8 @@
     <br>
     <form class="form" #assetForm="ngForm" autocomplete="off" (ngSubmit)="submitAsset()">
       <div class="mb-3 leftBox">
-        <label for="Type" class="form-label">Type of Asset<sup class="star">*</sup></label>
+        <label for="Type" class="form-label" *ngIf="!type.invalid">Type of Asset<sup class="star">*</sup></label>
+        <label for="Type" class="form-label errorMessage" *ngIf="type.invalid">Type of Asset<sup class="star">*</sup></label>
         <select [(ngModel)]="asset.tyape" name="Type" style="width: 96%;" #type="ngModel" required>
           <option value="">Select type</option>
           <option value="LAPTOP">LAPTOP</option>
@@ -30,12 +31,14 @@
         <span *ngIf="type.invalid && type.touched" class="errorMessage">Select Valid Type</span>
       </div>
       <div class="mb-3 middleBox">
-        <label for="Name" class="form-label">Name<sup class="star">*</sup></label>
+        <label for="Name" class="form-label" *ngIf="!name.invalid">Name<sup class="star">*</sup></label>
+        <label for="Name" class="form-label errorMessage" *ngIf="name.invalid">Name<sup class="star">*</sup></label>
         <input
           type="text"
           placeholder="Enter asset name e.g. &quot;Dell&quot;"
           name="Name"
           class="form-control"
+          pattern="^[A-Za-z][A-Za-z0-9_]{2,29}$"
           required
           #name = "ngModel"
           [(ngModel)]="asset.name"
@@ -43,7 +46,8 @@
         <span *ngIf="name.invalid && name.touched" class="errorMessage">Enter Valid Name</span>
       </div>
       <div class="mb-3 rightBox">
-        <label for="Proprietary" class="form-label">Proprietary<sup class="star">*</sup></label>
+        <label for="Proprietary" class="form-label" *ngIf="!Proprietary.invalid">Proprietary<sup class="star">*</sup></label>
+        <label for="Proprietary" class="form-label errorMessage" *ngIf="Proprietary.invalid">Proprietary<sup class="star">*</sup></label>
         <select [(ngModel)]="asset.proprietary" name="Proprietary" style="width: 96%;" #Proprietary="ngModel" required>
           <option value="">Select proprietary</option>
           <option value="OWN" selected="selected">OWN</option>
@@ -53,11 +57,12 @@
       </div>
       <br>
       <div class="mb-3 leftBox">
-        <label for="configuration" class="form-label">Configuration<sup class="star">*</sup></label>
+        <label for="configuration" class="form-label" *ngIf="!configuration.invalid">Configuration<sup class="star">*</sup></label>
+        <label for="configuration" class="form-label errorMessage" *ngIf="configuration.invalid">Configuration<sup class="star">*</sup></label>
         <input
           style="width: 96%;"
           type="text"
-          placeholder="configuration"
+          placeholder="e.g. &quot;Intel Core i3-3110M @2GHz&quot;"
           name="configuration"
           class="form-control"
           required
@@ -68,10 +73,11 @@
 
       </div>
       <div class="mb-3 middleBox">
-        <label for="serviceTag" class="form-label">Service Tag<sup class="star">*</sup></label>
+        <label for="serviceTag" class="form-label" *ngIf="!serviceTag.invalid">Service Tag<sup class="star">*</sup></label>
+        <label for="serviceTag" class="form-label errorMessage" *ngIf="serviceTag.invalid">Service Tag<sup class="star">*</sup></label>
         <input
           type="text"
-          placeholder="serviceTag"
+          placeholder="e.g. &quot;NIT-WKS-0013&quot;"
           name="serviceTag"
           class="form-control"
           required
@@ -82,11 +88,12 @@
 
       </div>
       <div class="mb-3 rightBox">
-        <label for="model" class="form-label">Model<sup class="star">*</sup></label>
+        <label for="model" class="form-label" *ngIf="!model.invalid">Model<sup class="star">*</sup></label>
+        <label for="model" class="form-label errorMessage " *ngIf="model.invalid">Model<sup class="star">*</sup></label>
         <input
         style="width: 96%;"
           type="text"
-          placeholder="model"
+          placeholder="e.g. &quot;DELL VOSTRO 2520&quot;"
           name="model"
           class="form-control"
           required
@@ -96,11 +103,12 @@
         <span *ngIf="model.invalid && model.touched" class="errorMessage">Enter Valid Model</span>
       </div>
       <div class="mb-3 leftBox">
-        <label for="hostName" class="form-label">Host Name<sup class="star">*</sup></label>
+        <label for="hostName" class="form-label" *ngIf="!hostName.invalid">Host Name<sup class="star">*</sup></label>
+        <label for="hostName" class="form-label errorMessage" *ngIf="hostName.invalid">Host Name<sup class="star">*</sup></label>
         <input
         style="width: 96%;"
           type="text"
-          placeholder="hostName"
+          placeholder="e.g. &quot;NIT-LPT-0040&quot;"
           name="hostName"
           class="form-control"
           required
@@ -110,7 +118,8 @@
         <span *ngIf="hostName.invalid && hostName.touched" class="errorMessage">Enter Valid Host Name</span>
       </div>
       <div class="mb-3 middleBox">
-        <label for="oem" class="form-label">OEM<sup class="star">*</sup></label>
+        <label for="oem" class="form-label" *ngIf="!oem.invalid">OEM<sup class="star">*</sup></label>
+        <label for="oem" class="form-label errorMessage" *ngIf="oem.invalid">OEM<sup class="star">*</sup></label>
         <select [(ngModel)]="asset.oem" name="oem" style="width: 96%;" #oem="ngModel" required>
           <option value="">Select OEM</option>
           <option value="Yes" selected="selected">Yes</option>
@@ -119,11 +128,11 @@
         <span *ngIf="oem.invalid && oem.touched" class="errorMessage">Select Valid Option</span>
       </div>
       <div class="mb-3 rightBox">
-        <label for="expiryDate" class="form-label">Expiry Date<sup class="star">*</sup></label>
+        <label for="expiryDate" class="form-label" *ngIf="!expiryDate.invalid">Expiry Date<sup class="star">*</sup></label>
+        <label for="expiryDate" class="form-label errorMessage" *ngIf="expiryDate.invalid">Expiry Date<sup class="star">*</sup></label>
         <input
         style="width: 96%;"
           type="date"
-          placeholder="expiryDate"
           name="expiryDate"
           class="form-control"
           min="{{todayDate}}"
@@ -134,11 +143,12 @@
         <span *ngIf="expiryDate.invalid && expiryDate.touched" class="errorMessage">Select Valid Date</span>
       </div>
       <div class="mb-3 leftBox">
-        <label for="owner" class="form-label">Owner<sup class="star">*</sup></label>
+        <label for="owner" class="form-label" *ngIf="!owner.invalid">Owner<sup class="star">*</sup></label>
+        <label for="owner" class="form-label errorMessage" *ngIf="owner.invalid">Owner<sup class="star">*</sup></label>
         <input
         style="width: 96%;"
           type="text"
-          placeholder="owner"
+          placeholder="e.g. &quot;Sysadmin&quot;"
           name="owner"
           class="form-control"
           required
@@ -148,10 +158,11 @@
         <span *ngIf="owner.invalid && owner.touched" class="errorMessage">Enter Valid owner Name</span>
       </div>
       <div class="mb-3 middleBox">
-        <label for="remarks" class="form-label">Remarks<sup class="star">*</sup></label>
+        <label for="remarks" class="form-label" *ngIf="!remarks.invalid">Remarks<sup class="star">*</sup></label>
+        <label for="remarks" class="form-label errorMessage" *ngIf="remarks.invalid">Remarks<sup class="star">*</sup></label>
         <input
           type="text"
-          placeholder="remarks"
+          placeholder="e.g. &quot;Employee_OK&quot;"
           name="remarks"
           class="form-control"
           required
@@ -161,22 +172,24 @@
         <span *ngIf="remarks.invalid && remarks.touched" class="errorMessage">Enter Valid Remarks</span>
       </div>
       <div class="mb-3 rightBox">
-        <label for="ram" class="form-label">Ram<sup class="star">*</sup></label>
+        <label for="ram" class="form-label" *ngIf="!ram.invalid">Ram<sup class="star">*</sup></label>
+        <label for="ram" class="form-label errorMessage" *ngIf="ram.invalid">Ram<sup class="star">*</sup></label>
         <input
         style="width: 96%;"
           type="text"
-          placeholder="Enter RAM"
+          placeholder="e.g. &quot;512MB | 36GB | 1.5TB &quot;"
           name="ram"
           class="form-control"
           required
-          pattern = "^\d+$"
+          pattern = "^[1-9]+(\.[0-9]+)?(MB|GB|TB|Mb|Tb|Gb|mb|tb|gb)$"
           #ram="ngModel"
           [(ngModel)]="asset.ram"
         />
-        <span *ngIf="ram.invalid && ram.touched" class="errorMessage">Enter Valid RAM</span>
+        <span *ngIf="ram.invalid && ram.touched" class="errorMessage">Enter Valid RAM e.g. &quot;512MB | 36GB | 1.5TB &quot;</span>
       </div>
       <div class="mb-3">
-        <label for="vendorId" class="form-label">Select Vendor<sup class="star">*</sup></label>
+        <label for="vendorId" class="form-label" *ngIf="!vendor.invalid">Select Vendor<sup class="star">*</sup></label>
+        <label for="vendorId" class="form-label errorMessage" *ngIf="vendor.invalid">Select Vendor<sup class="star">*</sup></label>
         <select [(ngModel)]="asset.vendorId" name="vendorId" required #vendor="ngModel">
           <option *ngFor="let item of vendors" value="{{ item.id }}">
             {{ item.name }}
